public class BestCarFinder {
    private CarManager carManager;
  
    public BestCarFinder(CarManager carManager) {
      this.carManager = carManager;
    }
  
    public Car getBestCar() {
      Car bestCar = null;
      // Logic to find the best car
      return bestCar;
    }
  }
  