@startuml car_diagram

class Car {
  - _id: String
  - _model: String
  - _brand: String

  + Car(id: String, model: String, brand: String)
  + getId(): String
  + getModel(): String
  + getBrand(): String
}

class CarManager {
  - cars: List<Car>

  + addCar(car: Car): void
  + getCars(): List<Car>
}

class CarNamesProvider {
  - carManager: CarManager

  + getCarNames(): List<String>
}

class BestCarFinder {
  - carManager: CarManager

  + getBestCar(): Car
}

CarManager --|> Car
CarNamesProvider --|> CarManager
BestCarFinder --|> CarManager

@enduml
